Update and rename voltage_strings.xml to strings.xml

--- a/overlay/packages/apps/Settings/res/values/strings.xml
+++ b/overlay/packages/apps/Settings/res/values/strings.xml
@@ -12,5 +12,5 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="voltage_maintainer">SHRAVAN(SK)</string>
+    <string name="protonplus_maintainer_summary">SHRAVAN(SK)</string>
 </resources>
